--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,13 @@ h1::after {
     aspect-ratio: 1;
 }
 
+.boardCell p {
+    margin: 0;
+    padding: 0;
+  }
+
+
+
 .buttons {
     display: flex;
     justify-content: center;
